rusqlite/libsqlite3-sys/src/bindgen.rs

#[link(name = "sqlite3", kind = "dylib")]
extern "C" {
    pub fn sqlite3_libversion() -> *const ::std::os::raw::c_char;
    pub fn sqlite3_sourceid() -> *const ::std::os::raw::c_char;
    pub fn sqlite3_libversion_number() -> ::std::os::raw::c_int;
    pub fn sqlite3_compileoption_used(zOptName: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_compileoption_get(N: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_threadsafe() -> ::std::os::raw::c_int;
    pub fn sqlite3_close(arg1: *mut sqlite3) -> ::std::os::raw::c_int;
    pub fn sqlite3_close_v2(arg1: *mut sqlite3) -> ::std::os::raw::c_int;
    pub fn sqlite3_exec(arg1: *mut sqlite3,
                        sql: *const ::std::os::raw::c_char,
                        callback:
                            ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                           *mut ::std::os::raw::c_void,
                                                                       arg2:
                                                                           ::std::os::raw::c_int,
                                                                       arg3:
                                                                           *mut *mut ::std::os::raw::c_char,
                                                                       arg4:
                                                                           *mut *mut ::std::os::raw::c_char)
                                                      ->
                                                          ::std::os::raw::c_int>,
                        arg2: *mut ::std::os::raw::c_void,
                        errmsg: *mut *mut ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_initialize() -> ::std::os::raw::c_int;
    pub fn sqlite3_shutdown() -> ::std::os::raw::c_int;
    pub fn sqlite3_os_init() -> ::std::os::raw::c_int;
    pub fn sqlite3_os_end() -> ::std::os::raw::c_int;
    pub fn sqlite3_config(arg1: ::std::os::raw::c_int, ...)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_db_config(arg1: *mut sqlite3,
                             op: ::std::os::raw::c_int, ...)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_extended_result_codes(arg1: *mut sqlite3,
                                         onoff: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_last_insert_rowid(arg1: *mut sqlite3) -> sqlite3_int64;
    pub fn sqlite3_changes(arg1: *mut sqlite3) -> ::std::os::raw::c_int;
    pub fn sqlite3_total_changes(arg1: *mut sqlite3) -> ::std::os::raw::c_int;
    pub fn sqlite3_interrupt(arg1: *mut sqlite3);
    pub fn sqlite3_complete(sql: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_complete16(sql: *const ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_busy_handler(arg1: *mut sqlite3,
                                arg2:
                                    ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                   *mut ::std::os::raw::c_void,
                                                                               arg2:
                                                                                   ::std::os::raw::c_int)
                                                              ->
                                                                  ::std::os::raw::c_int>,
                                arg3: *mut ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_busy_timeout(arg1: *mut sqlite3, ms: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_get_table(db: *mut sqlite3,
                             zSql: *const ::std::os::raw::c_char,
                             pazResult: *mut *mut *mut ::std::os::raw::c_char,
                             pnRow: *mut ::std::os::raw::c_int,
                             pnColumn: *mut ::std::os::raw::c_int,
                             pzErrmsg: *mut *mut ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_free_table(result: *mut *mut ::std::os::raw::c_char);
    pub fn sqlite3_mprintf(arg1: *const ::std::os::raw::c_char, ...)
     -> *mut ::std::os::raw::c_char;
    pub fn sqlite3_vmprintf(arg1: *const ::std::os::raw::c_char,
                            arg2: va_list) -> *mut ::std::os::raw::c_char;
    pub fn sqlite3_snprintf(arg1: ::std::os::raw::c_int,
                            arg2: *mut ::std::os::raw::c_char,
                            arg3: *const ::std::os::raw::c_char, ...)
     -> *mut ::std::os::raw::c_char;
    pub fn sqlite3_vsnprintf(arg1: ::std::os::raw::c_int,
                             arg2: *mut ::std::os::raw::c_char,
                             arg3: *const ::std::os::raw::c_char,
                             arg4: va_list) -> *mut ::std::os::raw::c_char;
    pub fn sqlite3_malloc(arg1: ::std::os::raw::c_int)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_malloc64(arg1: sqlite3_uint64)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_realloc(arg1: *mut ::std::os::raw::c_void,
                           arg2: ::std::os::raw::c_int)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_realloc64(arg1: *mut ::std::os::raw::c_void,
                             arg2: sqlite3_uint64)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_free(arg1: *mut ::std::os::raw::c_void);
    pub fn sqlite3_msize(arg1: *mut ::std::os::raw::c_void) -> sqlite3_uint64;
    pub fn sqlite3_memory_used() -> sqlite3_int64;
    pub fn sqlite3_memory_highwater(resetFlag: ::std::os::raw::c_int)
     -> sqlite3_int64;
    pub fn sqlite3_randomness(N: ::std::os::raw::c_int,
                              P: *mut ::std::os::raw::c_void);
    pub fn sqlite3_set_authorizer(arg1: *mut sqlite3,
                                  xAuth:
                                      ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                     *mut ::std::os::raw::c_void,
                                                                                 arg2:
                                                                                     ::std::os::raw::c_int,
                                                                                 arg3:
                                                                                     *const ::std::os::raw::c_char,
                                                                                 arg4:
                                                                                     *const ::std::os::raw::c_char,
                                                                                 arg5:
                                                                                     *const ::std::os::raw::c_char,
                                                                                 arg6:
                                                                                     *const ::std::os::raw::c_char)
                                                                ->
                                                                    ::std::os::raw::c_int>,
                                  pUserData: *mut ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_trace(arg1: *mut sqlite3,
                         xTrace:
                             ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                            *mut ::std::os::raw::c_void,
                                                                        arg2:
                                                                            *const ::std::os::raw::c_char)>,
                         arg2: *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_profile(arg1: *mut sqlite3,
                           xProfile:
                               ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                              *mut ::std::os::raw::c_void,
                                                                          arg2:
                                                                              *const ::std::os::raw::c_char,
                                                                          arg3:
                                                                              sqlite3_uint64)>,
                           arg2: *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_progress_handler(arg1: *mut sqlite3,
                                    arg2: ::std::os::raw::c_int,
                                    arg3:
                                        ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                       *mut ::std::os::raw::c_void)
                                                                  ->
                                                                      ::std::os::raw::c_int>,
                                    arg4: *mut ::std::os::raw::c_void);
    pub fn sqlite3_open(filename: *const ::std::os::raw::c_char,
                        ppDb: *mut *mut sqlite3) -> ::std::os::raw::c_int;
    pub fn sqlite3_open16(filename: *const ::std::os::raw::c_void,
                          ppDb: *mut *mut sqlite3) -> ::std::os::raw::c_int;
    pub fn sqlite3_open_v2(filename: *const ::std::os::raw::c_char,
                           ppDb: *mut *mut sqlite3,
                           flags: ::std::os::raw::c_int,
                           zVfs: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_uri_parameter(zFilename: *const ::std::os::raw::c_char,
                                 zParam: *const ::std::os::raw::c_char)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_uri_boolean(zFile: *const ::std::os::raw::c_char,
                               zParam: *const ::std::os::raw::c_char,
                               bDefault: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_uri_int64(arg1: *const ::std::os::raw::c_char,
                             arg2: *const ::std::os::raw::c_char,
                             arg3: sqlite3_int64) -> sqlite3_int64;
    pub fn sqlite3_errcode(db: *mut sqlite3) -> ::std::os::raw::c_int;
    pub fn sqlite3_extended_errcode(db: *mut sqlite3)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_errmsg(arg1: *mut sqlite3)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_errmsg16(arg1: *mut sqlite3)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_errstr(arg1: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_limit(arg1: *mut sqlite3, id: ::std::os::raw::c_int,
                         newVal: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_prepare(db: *mut sqlite3,
                           zSql: *const ::std::os::raw::c_char,
                           nByte: ::std::os::raw::c_int,
                           ppStmt: *mut *mut sqlite3_stmt,
                           pzTail: *mut *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_prepare_v2(db: *mut sqlite3,
                              zSql: *const ::std::os::raw::c_char,
                              nByte: ::std::os::raw::c_int,
                              ppStmt: *mut *mut sqlite3_stmt,
                              pzTail: *mut *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
